Incorrect warning from Certificate Expiration Monitor when TLS is not enabled

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.7.0
    • Affects Version/s: None
    • Component/s: Security
    • None
    • Fully Compatible
    • ALL
    • Security 2020-08-24
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The certificate expiration monitor is producing a warning about an expired certificate even when SSL is not enabled.

      CertificateExpirationMonitor","msg":"Server certificate has expired","attr":{"certExpiration":"1970-01-01T00:00:00.000Z"}
      

            Assignee:
            Mark Benvenuto
            Reporter:
            Mark Benvenuto
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: