SERVER-50164 Incorrect warning from Certificate Expiration Monitor when TLS is not enabled